# AIML-018-IITI-SoC

./: .gitignore  CustomMetaDataExtractor.py  Dockerfile  PathwayServerExpose.py  dummy_client.py  env.yaml  environment.yaml  minstral_langchain.py  mvp_langchain.py  mvp_langchain2.py  mvp_langchain3.py  readme.md  requirements.txt  requirments.txt  test.ipynb  test.py  ~$ueries.docx
App/: app.py
CustomPathwayPipeline/: Documentation.md  Frontend.py  PDFSummarizer.py  ParseLogs.py  PathwayServerExpose.py  WebdataExtractorFromLink.py  __init__.py  app.py  batch_processor.py  config.py  environment.yml  flask_api_expose.py  keyword_extractor.py  loader.py  pyproject.toml  pyrightconfig.json  query_classifier.py  rag_chain_builder.py  requirments.txt  vector_store_client.py
CustomPathwayPipeline/Data/PDFFiles/: academic_iiti_ac_in_17052013_Preparatory-Courses-of-Studies-2013(May).txt  academic_iiti_ac_in_2025-26_Academic Calendar.txt  (+16 more)
CustomPathwayPipeline/StreamlitApp/: app.py  frontend_config.py
CustomPathwayPipeline/app/: __init__.py  batch_processor.py  flask_api_expose.py  flask_api_expose_cookie_storage.py  flask_api_expose_redis.py
CustomPathwayPipeline/core/: __init__.py  loader.py  query_classifier.py  rag_chain_builder.py  vector_store_client.py
CustomPathwayPipeline/data_preprocessing/: __init__.py  keyword_extractor.py  parse_logs.py  pdf_summarizer.py  testing_async.ipynb  web_data_extractor_from_links.py
CustomPathwayPipeline/eval/: eval.py  queries.csv  queries.json
CustomPathwayPipeline/pathway_server/: PathwayServerExpose.py  helpers.py
(+763 files in other folders)
